--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-logging.path=log
-logging.file=application.log
+logging.file=logs/application.log
 logging.level.root=WARN
 logging.level.com.games.circular=INFO
 logging.pattern.console=%message%n
